fixed responsive width of activities calendar on mobile Safari

--- a/css/style.css
+++ b/css/style.css
@@ -2675,5 +2675,5 @@ margin-right: 5%;
 
 .responsiveCal iframe {
 
-	position: absolute; top:0; left: 0; width: 100%; height: 100%;
+	position: absolute; top:0; left: 0; width: 1px; min-width: 100%; height: 100%;
 }
